@@ -32,8 +32,7 @@
 					<scanIntervalSeconds>10</scanIntervalSeconds>
 					<stopKey>stopApp</stopKey>
 					<stopPort>9988</stopPort>
-					<jvmArgs>-Xmx1g -Xms1g -XX:PermSize=256m -XX:MaxPermSize=256m
-						-XX:+HeapDumpOnOutOfMemoryError</jvmArgs>
+					<jvmArgs>-server -Xmx1g -Xms1g --XX:NewRatio=50 -XX:+HeapDumpOnOutOfMemoryError -XX:+UseG1GC -XX:+UnlockExperimentalVMOptions -XX:+AggressiveOpts -XX:MaxGCPauseMillis=400 -XX:GCPauseIntervalMillis=8000 -XX:+PrintGCTimeStamps -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCApplicationConcurrentTime</jvmArgs>
 					<connectors>
 						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
 							<port>80</port>
